@@ -4,11 +4,11 @@ import com.mongodb.client.AggregateIterable;
 import com.mongodb.client.MongoClient;
 import com.mongodb.client.MongoCollection;
 import com.mongodb.client.MongoDatabase;
-import com.subhajit.Medicare.Models.Product;
+import com.subhajit.Medicare.Models.DTO.Product;
 import com.subhajit.Medicare.Repository.SearchRepository;
 import org.bson.Document;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.mongodb.core.convert.MongoConverter;
+import org.springframework.data.mongodb.core.convert.MappingMongoConverter;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
@@ -17,24 +17,38 @@ import java.util.List;
 
 @Service
 public class SearchService implements SearchRepository {
+
     @Autowired
-    MongoClient mongoClient;
+    private MongoClient mongoClient;
+
     @Autowired
-    MongoConverter  mongoConverter;
+    private MappingMongoConverter mongoConverter;
+
     @Override
     public List<Product> findByText(String text) {
-        final List<Product> products = new ArrayList<>();
+        List<Product> products = new ArrayList<>();
+
         MongoDatabase database = mongoClient.getDatabase("Medicare");
-        MongoCollection<Document> collection = database.getCollection("Prod uct");
-        AggregateIterable<Document> result = collection.aggregate(Arrays.asList(new Document("$search",
-                        new Document("index", "product")
-                                .append("text",
-                                        new Document("query", text)
-                                                .append("path", List.of("name","brand","categories")))),
+        MongoCollection<Document> collection = database.getCollection("Product");
+
+        AggregateIterable<Document> result = collection.aggregate(Arrays.asList(
+                new Document("$match",
+                        new Document("$or", Arrays.asList(
+                                new Document("name", new Document("$regex", text).append("$options", "i")),
+                                new Document("brand", new Document("$regex", text).append("$options", "i"))
+                        ))
+                ),
                 new Document("$sort",
-                        new Document("buyer", -1L)),
-                new Document("$limit", 10L)));
-        result.forEach(document->products.add(mongoConverter.read(Product.class,document)));
+                        new Document("rating", -1)
+                ),
+                new Document("$limit", 10)
+        ));
+
+        result.forEach(document -> {
+            Product product = mongoConverter.read(Product.class, document);
+            products.add(product);
+        });
+
         return products;
     }
 }
